crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__if_extra_indent.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/if_extra_indent.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            14,
        ),
        range: 0..153,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(
                        8,
                    ),
                    range: 103..134,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(
                                0,
                            ),
                            range: 106..110,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(
                                    1,
                                ),
                                range: 116..120,
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    7,
                                ),
                                range: 129..134,
                                value: BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        range: 129..134,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    3,
                                                ),
                                                range: 129..130,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    5,
                                                ),
                                                range: 133..134,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 140..144,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        13,
                    ),
                    range: 146..152,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    11,
                                ),
                                range: 146..147,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 150..152,
                            value: Int(
                                10,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | if True:
3 |     pass
4 |         a + b
  | ^^^^^^^^ Syntax Error: Unexpected indentation
5 |
6 |     pass
  |


  |
6 |     pass
7 |
  | ^ Syntax Error: Expected a statement
8 | a = 10
  |
